<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg_gray"
        android:gravity="center"
        android:text="@string/login_to_cloud"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_account"
        style="@style/accountInputBorder"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"
            android:textColor="@color/grey" />

        <EditText
            style="@style/accountEditText"
            android:hint="@string/et_account_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_account"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textColor="@color/grey" />

        <EditText
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/et_password_hint" />

        <Button
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_show"
            android:text="@string/btn_show"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_forget_password"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forget_password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="13dp" >

        <Button
            android:id="@+id/btn_register"
            style="@style/accountButtonStyle"
            android:layout_marginRight="4dp"
            android:background="@drawable/btn_add_accounts"
            android:text="@string/btn_add_accounts" />

        <Button
            android:id="@+id/btn_login"
            style="@style/accountButtonStyle"
            android:layout_marginLeft="4dp"
            android:background="@drawable/btn_quick_register"
            android:text="@string/btn_quick_register" />
    </LinearLayout>

</RelativeLayout>