<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparency"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_op_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/file_operate_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_operate_bg"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/file_delete"
            android:gravity="center"
            android:text="@string/tv_file_op_delete"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/file_download"
            android:gravity="center"
            android:text="@string/tv_file_op_download"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/file_share"
            android:gravity="center"
            android:text="@string/tv_file_op_share"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/file_more"
            android:gravity="center"
            android:text="@string/tv_file_op_more"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_op_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/file_operate_down" />

</LinearLayout>